# pobr-upsdetector

./: .gitignore  CMakeLists.txt  analiza_statystyka.ods  configuartion.h  configuration.h  main.cpp  maskoperators.cpp  maskoperators.h  opencv_playground.cpp  p.shape  permutate.py  point.cpp  point.h  preprocessing.cpp  preprocessing.h  r.shape  s.shape  segment.cpp  segment.h  segmentfiller.cpp  segmentfiller.h  showsegments.cpp  u.shape  upsdetector.kdev4
